# goquant_arnav

./: .gitignore  README.md  VIDEO_SCRIPT.md  fetch_option_chain.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  market_bus.py
src/analytics/: __init__.py  charts.py  correlation.py  historical_data.py  stress_testing.py
src/bot/: __init__.py  keyboards.py
src/exchanges/: __init__.py  deribit.py  deribit_options.py  okx.py  types.py
src/options/: strategies.py
src/portfolio/: __init__.py  state.py
src/risk/: __init__.py  greeks.py  metrics.py
src/services/: __init__.py  costing.py  hedge.py  options_pricing.py
src/util/: __init__.py  env.py
tests/: test_analytics.py  test_bot.py  test_bot_functionality.py  test_bot_protective_put_select.py  test_correlation.py  test_hedge_functionality.py  test_new_strategies.py  test_options_hedge.py  test_portfolio.py  test_portfolio_crud.py  test_protective_put_select_strike.py  test_realtime_pricing.py  test_risk_watcher.py  test_stress_chart.py  test_stress_testing.py  test_transactions.py
